# shabda

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cyrius.cyml
benches/: benchmarks.rs
docs/: benchmarks-rust-vs-cyrius.md
docs/adr/: README.md
docs/architecture/: 001-dictionary-first-design.md  002-syllabification-mop.md  003-phrase-boundary-markers.md  004-convert-options-builder.md  005-ssml-hand-rolled-parser.md  006-heteronym-context-table.md  007-multi-language-dispatch.md
docs/development/: roadmap.md  state.md
docs/guides/: error-handling.md  getting-started.md  logging.md  multi-language.md  prosody-control.md
examples/: basic_g2p.rs  custom_dictionary.rs
fuzz/: shabda.fcyr
rust-old/: Cargo.toml  deny.toml
rust-old/benches/: benchmarks.rs
rust-old/examples/: prosody_options.rs
rust-old/src/: heteronym.rs  lib.rs  ssml.rs  validate.rs
rust-old/tests/: integration.rs
src/: dictionary.rs  engine.cyr  engine.rs  error.cyr  error.rs  heteronym.cyr  lib.rs  main.cyr  normalize.cyr  normalize.rs  prosody.cyr  prosody.rs  rules.cyr  rules.rs  ssml.cyr  syllable.cyr  syllable.rs  validate.cyr  validate.rs
src/dictionary/: format.rs
tests/: engine.tcyr  error.tcyr  heteronym.tcyr  integration.rs  normalize.tcyr  prosody.tcyr  rules.tcyr  shabda.bcyr  shabda.fcyr  shabda.tcyr  ssml.tcyr  syllable.tcyr  validate.tcyr
